# april

./: README.md  flake.nix  meson.build
core/: meson.build
core/lib/: abi.vala  application.vala  build.vala.in  platform.vala  view.vala
core/lib/platform/: service.vala
core/lib/platform/service/: application-launcher.vala  application.vala  view.vala
examples/basic/: meson.build
examples/basic/data/: com.example.basic.desktop.in  com.example.basic.metainfo.xml.in
examples/basic/src/: main.vala
